--- a/flask/myapp2.0/templates/Register.html
+++ b/flask/myapp2.0/templates/Register.html
@@ -10,14 +10,16 @@
         <h3>For registration,  please enter your details !</h3>
         <p></p>
         <p></p>
-        <label for="fname">First name:</label>
-        <input type="text" id="fname" name="fname"><br><br>
-        <label for="lname">Last name:</label>
-        <input type="text" id="lname" name="lname"><br><br>
-        <label for="email" >Email: </label>
-        <input type="text" id="email" name="email"><br><br>
-        <label for="passwd" >Password: </label>
-        <input type="text" id="passwd" name="passwd"><br><br>
-        <input type="submit" value="Submit">
+        <form method="get">
+            <label for="fname">First name:</label>
+            <input type="text" id="fname" name="fname" value="{{ fname }}"><br><br>
+            <label for="lname">Last name:</label>
+            <input type="text" id="lname" name="lname" value="{{ lname }}"><br><br>
+            <label for="email" >Email: </label>
+            <input type="text" id="email" name="email" value="{{ email }}"><br><br>
+            <label for="passwd" >Password: </label>
+            <input type="text" id="passwd" name="passwd" value="{{ passwd }}"><br><br>
+            <input type="submit" value="Submit">
+        </form>   
 </body>
 </html>
