--- a/flask/myapp2.0/templates/Register.html
+++ b/flask/myapp2.0/templates/Register.html
@@ -12,13 +12,13 @@
         <p></p>
         <form method="get">
             <label for="fname">First name:</label>
-            <input type="text" id="fname" name="fname" value="{{ fname }}"><br><br>
+            <input type="text" id="fname" name="fname" value="{% if fname != None %}{{ fname }}{% endif %}"><br><br>
             <label for="lname">Last name:</label>
-            <input type="text" id="lname" name="lname" value="{{ lname }}"><br><br>
+            <input type="text" id="lname" name="lname" value="{% if lname != None %}{{ lname }}{% endif %}"><br><br>
             <label for="email" >Email: </label>
-            <input type="text" id="email" name="email" value="{{ email }}"><br><br>
+            <input type="text" id="email" name="email" value="{% if email != None %}{{ email }}{% endif %}"><br><br>
             <label for="passwd" >Password: </label>
-            <input type="text" id="passwd" name="passwd" value="{{ passwd }}"><br><br>
+            <input type="text" id="passwd" name="passwd" value="{% if passwd != None %}{{ passwd }}{% endif %}"><br><br>
             <input type="submit" value="Submit">
         </form>   
 </body>
