--- a/flask/myapp2.0/templates/Register.html
+++ b/flask/myapp2.0/templates/Register.html
@@ -19,7 +19,12 @@
             <input type="text" id="email" name="email" value="{% if email != None %}{{ email }}{% endif %}"><br><br>
             <label for="passwd" >Password: </label>
             <input type="text" id="passwd" name="passwd" value="{% if passwd != None %}{{ passwd }}{% endif %}"><br><br>
-            <input type="submit" value="Submit">
+            <input type="submit" id=button value="Submit"> 
+            <br><br>
+            <br><br>
+           
+            
+    
         </form>   
 </body>
 </html>
