added db-build, working on submit-button

--- a/flask/myapp2.0/templates/Register.html
+++ b/flask/myapp2.0/templates/Register.html
@@ -19,12 +19,10 @@
             <input type="text" id="email" name="email" value="{% if email != None %}{{ email }}{% endif %}"><br><br>
             <label for="passwd" >Password: </label>
             <input type="text" id="passwd" name="passwd" value="{% if passwd != None %}{{ passwd }}{% endif %}"><br><br>
-            <input type="submit" id=button value="Submit"> 
+            <input type="submit" id=button name="submit_button" value="Submit"> 
             <br><br>
-            <br><br>
-           
-            
-    
+            <br><br>           
+               
         </form>   
 </body>
 </html>
