remove class, return vars in enter.html

--- a/flask/myapp2.0/templates/Register.html
+++ b/flask/myapp2.0/templates/Register.html
@@ -10,7 +10,7 @@
         <h3>For registration,  please enter your details !</h3>
         <p></p>
         <p></p>
-        <form method="post" action="/register">
+        <form  method="post">
             <label for="fname">First name:</label>
             <input type="text" id="fname" name="fname" value="{% if fname != None %}{{ fname }}{% endif %}"><br><br>
             <label for="lname">Last name:</label>
